--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="image-item">
                     <img src="game/1.JPG" alt="웹 프로젝트 이미지">
                     <p class="image-caption">
-                        <a href="land202066044.netlify.app">land202066044.netlify.app</a>
+                        <a href="https://tjrgml3632-del.github.io/gameinfo/">https://tjrgml3632-del.github.io/gameinfo/</a>
                         <br><br>게임에 대한 정보를 한 눈에 알아 볼 수 있도록 기획한 웹 페이지 입니다.
                     </p>
                 </div>
@@ -133,4 +133,5 @@
     </section>
 
 </body>
+
 </html>
